# app

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Makefile  apiservice.DockerFile  dependencies.Dockerfile  docker-compose.yml  mongo.pem.base64  runApp.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: test-build-ubuntu.yml
app/: CMakeLists.txt  main.cpp  main.cpp.in  main.hpp  module_game.cpp  module_game.hpp  module_manager.cpp  module_manager.h  pre-definition.hpp.in
app/calculator/: module_calculator.cpp
app/games/: game_factory.h  module_game.cpp  module_game.hpp
app/games/gameA/: gameA.hpp
app/games/gameB/: gameB.cpp
app/translate/: module_translate.cpp
cmake/: AddModulePkgConfig.cmake  CodeCoverage.cmake  Config.cmake  Document.cmake  FetchLib.cmake  RegistModule.cmake  Sanitizer.cmake  Tools.cmake
docs/: docCfg
graphical_app/: CMakeLists.txt  main.cpp
mongo/: mongod.conf
node/: .env  app.js  package-lock.json  package.json
node/models/: Histories.js  moduleapp.js
node/routes/: recordsRoutes.js
node/utils/: authUtils.js
src/: CMakeLists.txt  RegistModule.cmake
src/calculator/: CMakeLists.txt  calculator-config.cmake.in  calculator.cpp  calculator.hpp  module_calculator.cpp  module_calculator.hpp
src/common/: .gitignore  CMakeLists.txt  common-config.cmake.in  module_manager.cpp  module_manager.h  mongo_db_client.cpp  mongo_db_client.hpp  simple_restfulAPI.cpp  simple_restfulAPI.hpp  thread_pool.cpp  thread_pool.hpp  utilities.hpp
src/games/: CMakeLists.txt  gameInterface.h  game_factory.cpp  game_factory.h  game_interface.cpp  game_interface.h  games-config.cmake.in  module_game.cpp  module_game.hpp
src/games/gameA/: gameA.cpp  gameA.hpp
src/games/gameB/: gameB.cpp  gameB.hpp
src/translate/: CMakeLists.txt  module_translate.cpp  module_translate.hpp
test/: CMakeLists.txt  test.cpp
this-ports/cpprestsdk/: portfile.cmake
this-ports/mongo-cxx-driver/: portfile.cmake
this-triplets/: x64-linux-dbg.cmake
