project(api-test)

add_executable(${PROJECT_NAME} test.cpp)

find_package(Catch2 CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE common Catch2::Catch2WithMain)

set_target_properties(
    ${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
)

set_target_properties(${PROJECT_NAME} Catch2::Catch2WithMain PROPERTIES FOLDER "Test")

list(APPEND CMAKE_MODULE_PATH ${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/share/catch2)
include(Catch)
catch_discover_tests(${PROJECT_NAME} PROPERTIES ENVIRONMENT "MONGODB_SETUP=$ENV{MONGODB_URI}|$ENV{MONGODB_NAME}|$ENV{MONGODB_COLL}")

install(
    TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
)
