project(translate)
regist_module(${PROJECT_NAME})
find_package(ZLIB REQUIRED)
find_package(cpprestsdk REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE cpprestsdk::cpprest)
get_target_property(TARGET_TYPE cpprestsdk::cpprest TYPE)
if(TARGET_TYPE STREQUAL "SHARED_LIBRARY")
    install(IMPORTED_RUNTIME_ARTIFACTS cpprestsdk::cpprest)
endif()
